# test_me

./: CMakeLists.txt  cycles.c  kyber_ason.py  kyber_wrapper.c  libascon.dylib  libkyber.dylib  libkyber1024.dylib  libkyber1024_arm64.dylib  libkyber1024_universal.dylib  libkyber1024_x86_64.dylib  libkyber512.dylib  libkyber512_arm64.dylib  libkyber512_universal.dylib  libkyber512_x86_64.dylib  libkyber768.dylib  libkyber768_arm64.dylib  libkyber768_universal.dylib  libkyber768_x86_64.dylib  python_test.py  red.txt  setup.py  test_kyber.py
build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake
build_windows/: CMakeCache.txt  Makefile  cmake_install.cmake
ref/: Makefile  Makefile.main  kyber_bench  kyber_benchmark.c  kyber_test  main.c  main1024  main_cycle.c  params.h
ref/test/: cpucycles.c  cpucycles.h
